<resources>
    <string name="app_name">Sagy</string>
    <string-array name="select_type">
        <item>choose Type</item>
        <item>Nodal Officer</item>
        <item>MP</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_complain">complain</string>
    <string-array name="select_catagory">
        <item>choose category</item>
        <item>Crime</item>
        <item>Agriculture</item>
        <item>Business Services</item>
        <item>Computers</item>
        <item>Energy</item>
        <item>Social Walfare</item>
        <item>e-Governence</item>
    </string-array>
    <string-array name="villagenames">
        <item>choose village</item>
        <item>Devdha</item>
        
        <item>Lonawada</item>
        
        <item>Halol</item>
        
    </string-array>
    <string name="title_activity_wall_of_fame">wall_of_fame</string>
    <string name="dialog_message">mobile number</string>
    <string name="dialog_title">Verification</string>
    <string name="DataAnalyses">Data Analyses</string>
    <string name="small_text">"A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and <magi></magi>c.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"</string>
    <string name="url">http://phpstack-165541-479108.cloudwaysapps.com/api/webservice.php</string>
    <string name="imgurl">http://phpstack-165541-479108.cloudwaysapps.com/uploads/</string>
    <string name="title_activity_aboutus">Aboutus</string>
    <string name="title_activity_faq">faq</string>
    <string name="faq_ratings">Ratings for various schemes can be provided by the villagers. Go to schemes->my village->Ratings </string>
    <string name="sagy">Sansad Adarsh Gram Yojana (abbr.: SAGY) is a rural development programme broadly focusing upon the development in the villages which includes social development, cultural development and spread motivation among the people on social mobilization of the village community.</string>
    <string name="login_gov">If you are a Government Employee having @gov.in or @nic.in email Id, you can use the credentials for the same to log in.Only an MP or Nodal Officer can login through mp login.</string>
    <string name="login_public">For the larger public, Sign in, in SAGY can be done through your 12-digit Aadhar number. Once you enter your Aadhar Number, a One Time Password (OTP) shall be sent to your registered mobile number which would be directly fetched .You do not need to enter the OTP. The next time you open the app you would be directly logged in.</string>
    <string name="collaborate">Students of various colleges all over the world can collaborate with the government to provide innovative solutions to the problem statement provided in SAGY.</string>
    <string name="what_is_rating">What is Rating?</string>
    <string name="collaborate_with_the_government">Collaborate with the Government</string>
    <string name="how_to_login_for_public">How to login for public?</string>
    <string name="how_to_login_for_govt_employ">How to login for govt.employ?</string>
    <string name="what_is_sansad_adarsh_gram_yojna">What is Sansad Adarsh Gram Yojna?</string>
    <string name="why_should_i_participate">Why should i participate</string>
    <string name="participate">Active participation of the villagers would help to evaluate the workdone. It would help to evolve the village futher more.</string>
    <string name="other_isuues">Other isuues?</string>
    <string name="other">"For other issues contact:\n"
   " e-mail:ynainsukha@hotmail.com  call:0919978913706\n"
    </string>
    <string name="first_line_ach">achivement is a platform on which villagers can share thir achievements with people of near by villages </string>
    <string name="secon_line_ach">villagers can also add thir achivements by clicking on plus + button given in buttom left corner of achivement screen</string>
    <string name="third_line_ach">steps to add achivement in achivement Tab \n
    step 1: click on camera icon to capture the moment or click on browse button to upload picture from your phone gallery \n
    villagers can upload 360 degree view in order to make moment live \n
    step 2: write a short title about your achievement \n
    step 3: add the detail description of the event in which you have achieved the same \n
    step 4: click on submit button\n
    your achivement has been uploaded, now you can see your achivement on achivement tab</string>
    <string name="yash">Yash Nainsukha</string>
    <string name="yno">+91-8006182357</string>
    <string name="yen">ynainsukha@hotmail.com</string>
    <string name="abhi">Abhinity Merai</string>
    <string name="ano">+91-8006164826</string>
    <string name="aen">abhinitymerai3@gmail.com</string>
    <string name="sourabh">Sourov Karmakar</string>
    <string name="sno">+91-8008153248</string>
    <string name="sen">karmakarsourabh7@gmail.com</string>
    <string name="ruju">Ruju Patel</string>
    <string name="rno">+91-8006483156</string>
    <string name="ren">Rujupatel5@gmail.com</string>
    <string name="nidhi">Nidhi Patel</string>
    <string name="nno">+91-8004569723</string>
    <string name="nen">Nidhipatel45@gmail.com</string>
    <string name="hiral">Hiral Thakkar</string>
    <string name="hno">+91-8007361586</string>
    <string name="hen">hiralthakkar56@gmail.com</string>
    <string name="goal">Goal</string>
    <string name="goals">"a. improved basic amenities \nb. higher productivity \nc. enhanced human development \nd. better livelihood opportunities \ne. reduced disparities \nf. access to rights and entitlements \ng. wider social mobilization \nh. enriched social capital"</string>
    <string name="about_developers">About developers</string>
    <string name="this_project_was_developed_by_team_proton_ic_during_the_smart_india_hackathon_2018">This project was developed by team Proton-ic during the Smart India Hackathon 2018.</string>
    <string name="the_team_proton_ic">The team Proton-ic</string>
    <string name="prtonic_team">"1. Yash Nainsukha \n2. Abhinity Merai \n3. Ruju Patel \n4. Nidhi Patel \n5. Sourov Karmakar \n6. Hiral Thakkar"</string>
    <string name="the_mentors">The mentors</string>
    <string name="protonic_mentors">"1. Chiragkumar Desai \n2. Soham Pandya"</string>
</resources>