<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.shi.com.sagy.Aboutus"
    tools:showIn="@layout/activity_aboutus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:id="@+id/Sagy_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_sansad_adarsh_gram_yojna"
            android:background="#85716c"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/Content_Sagy_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sagy" />

        <TextView
            android:id="@+id/Goal_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:background="#85716c"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:paddingLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Conttent_goal_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="To trigger processes which lead to holistic development of the identified Gram Panchayats
    to substantially improve the standard of living and quality of life of all sections of the population through –" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">
                <TextView
                    android:id="@+id/Conttent_goal_a_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goals" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/developers_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developers"
            android:background="#85716c"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Conttent_developers_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_project_was_developed_by_team_proton_ic_during_the_smart_india_hackathon_2018" />

            <TextView
                android:id="@+id/Conttent_developers_team_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/the_team_proton_ic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Content_developers_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prtonic_team" />
            </LinearLayout>

            <TextView
                android:id="@+id/Conttent_developers_ment_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/the_mentors" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/Content_mentors_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protonic_mentors" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
